Added modal functionality and made style improvements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+.inner-content[_ngcontent-ng-c555456802]{
+  background: linear-gradient(135deg, #f0f0f0, #f5f6f7); 
+}
+
 :host {
   display: flex;
   text-rendering: optimizeLegibility;
