--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
           </span>
         </span>
         <button nz-button nzType="link" (click)="logout()" style="position: absolute; right: 20px; top: 15px; display: flex; align-items: center;">
-          <nz-icon nzType="logout" style="font-size: 16px; color: #1890ff;">Logout</nz-icon> <!-- Logout İkonu -->
+          <nz-icon nzType="logout" style="font-size: 16px; color: #1890ff;">Logout</nz-icon> 
         </button>
       </div>
     </nz-header>
