--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <h2>Giriş Yap</h2>
+  <h2>Login</h2>
   <form nz-form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <nz-form-item>
       <nz-form-label [nzSpan]="5">Email</nz-form-label>
@@ -9,19 +9,19 @@
     </nz-form-item>
 
     <nz-form-item>
-      <nz-form-label [nzSpan]="5">Şifre</nz-form-label>
+      <nz-form-label [nzSpan]="5">Password</nz-form-label>
       <nz-form-control [nzSpan]="17" [nzHasFeedback]="true">
         <input nz-input formControlName="password" type="password" placeholder="Password" />
       </nz-form-control>
     </nz-form-item>
 
-    <button nz-button nzType="primary" [disabled]="!loginForm.valid">Giriş Yap</button>
+    <button nz-button nzType="primary" [disabled]="!loginForm.valid">Login</button>
   </form>
 
   <div *ngIf="errorMessage" class="error" style="color: red; margin-top: 10px;">
     {{ errorMessage }}
   </div>
   <div class="register-link" style="margin-top: 15px;">
-    <p>Hesabınız yok mu? <a routerLink="/register">Kayıt olun</a></p>
+    <p>Don't have an account? <a routerLink="/register">Sign up</a></p>
   </div>
 </div>
